# VK-ML-2022-01

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.c  workspace.code-workspace
.github/: ci_hw-2_parallel.yml  workspace.code-workspace
.github/workflows/: ci.yml  ci_hw-1_mail.yml  ci_hw-2_parallel.yml
Tests/: CMakeLists.txt  tests.cpp
interface_main/: CMakeLists.txt  interface_main.c  interface_main.h  processing_sequential.c  sequence_gen.c
linters/: run.sh
linters/cpplint/: cpplint.py
mail_lib/: CMakeLists.txt  mail.c  mail.h
processing_parallel/: CMakeLists.txt  processing_parallel.h
processing_sequential/: CMakeLists.txt  processing_sequential.c  processing_sequential.h
project/include/: utils.h
project/src/: main.c
src/: main.c
tests/: CMakeLists.txt  test.cpp  test_mail.cc  test_mail.cpp
Контест 29.05.2022/: test.txt  train_ans.txt
